--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,10 @@ include_package_data = True
 package_dir = =src
 python_requires = >=3.10,<4
 install_requires =
+    beautifulsoup4>=4.11.1,<5
     importlib-metadata
+    ratelimit>=2.2.1,<3
+    requests>=2.28,<3
 
 [options.packages.find]
 where = src
