--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,10 @@
 tests/**/*.html linguist-vendored
+
+# These files will be normalized on commit (CRLF converted to LF) - asterisk is a wildcard
+* text eol=lf
+
+# These files will NOT be normalized
+*.png -text
+*.jpg -text
+*.gif -text
+*.ico -text
