--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ long_description_content_type = text/markdown
 url = https://github.com/cooperwalbrun/pychan
 platforms = any
 classifiers =
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
@@ -17,7 +18,7 @@ zip_safe = False
 packages = find:
 include_package_data = True
 package_dir = =src
-python_requires = >=3.10,<4
+python_requires = >=3.9,<4
 install_requires =
     beautifulsoup4>=4.11.1,<5
     importlib-metadata
