--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py310
+envlist = py39,py310
 isolated_build = True
 
 [testenv]
@@ -13,4 +13,5 @@ commands =
 
 [gh-actions]
 python =
+    3.9: py39
     3.10: py310
