--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pychan
 author = cooperwalbrun
-author_email = 69944858+cooperwalbrun@users.noreply.github.com
+author_email = mail@cooperwalbrun.io
 description = A Python library for interacting with 4chan in a programmatically-friendly way.
 long_description = file:README.md
 long_description_content_type = text/markdown
