--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,24 +5,24 @@ on:
       - master
 jobs:
   unit-test:
-    name: Unit Test and Code Coverage
+    name: Unit Test with Code Coverage Analysis
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install .[github_actions]
-      - name: Unit test and code coverage on Python ${{ matrix.python-version }}
+      - name: Unit test with code coverage analysis on Python ${{ matrix.python-version }}
         run: tox
       - name: Upload test coverage report to Codecov
         uses: codecov/codecov-action@v3
