--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[github_actions]
+      - name: Type-check the source code
+        run: mypy src
       - name: Unit test with code coverage analysis on Python ${{ matrix.python-version }}
         run: tox
       - name: Upload test coverage report to Codecov
