--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,10 @@ python_requires = >=3.9,<4
 install_requires =
     beautifulsoup4>=4.11.1,<5
     importlib-metadata
-    ratelimit>=2.2.1,<3
+    pyrate-limiter>=2.8,<3
     requests>=2.28,<3
+    types-beautifulsoup4>=4.11,<5
+    types-requests>=2.28,<3
 
 [options.packages.find]
 where = src
@@ -32,6 +34,7 @@ exclude = tests
 
 [options.extras_require]
 testing =
+    mypy
     pytest
     pytest-cov
     pytest-mock
