--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -10,14 +10,14 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build setuptools setuptools-scm wheel
+          pip install build
       - name: Build distributions
         # The following command(s) must produce ready-to-upload artifacts in the "dist" folder
         run: python -m build
