--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Upload test coverage report to Codecov
         uses: codecov/codecov-action@v3
         with:
+          # We specify the token below to mitigate the impact of the bug mentioned here:
+          # https://community.codecov.com/t/upload-issues-unable-to-locate-build-via-github-actions-api/3954
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           flags: python${{ matrix.python-version }}
           files: coverage.xml
