--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,3 @@
-# These files will be ignored by GitHub when it computes programming language statistics for this repository
-tests/**/*.html linguist-vendored
-tests/**/*.json linguist-vendored
-
-# These files will be normalized on commit (CRLF converted to LF) - asterisk is a wildcard
+# These files will be normalized on commit (CRLF converted to LF)
 * text eol=lf
+
